Funcion encoder charlada

--- a/AMIA/LDA_QDA.ipynb
+++ b/AMIA/LDA_QDA.ipynb
@@ -134,6 +134,8 @@
         "    \n",
         "    # Q1: why is there no need for class_to_name?\n",
         "    \"\"\"\n",
+        "    Por que las tags del data set original estan definidas como nombres (strings)\n",
+        "    \n",
         "    Porque fit va a recibir un array de tags, \n",
         "    y hace un diccionario en donde con name y clase. \n",
         "    La clase encoder entonces hace un encoder valga la redundancia. \n",
