--- a/AMIA/LDA_QDA.ipynb
+++ b/AMIA/LDA_QDA.ipynb
@@ -537,15 +537,52 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## Preguntas teoricas\n",
+        "\n",
+        "### 1- \n",
+        "\n",
+        "$$\n",
+        "\\log{f_j(x)} =  -\\frac{1}{2}\\log |\\Sigma| - \\frac{1}{2} (x-\\mu_j)^T \\Sigma^{-1} (x- \\mu_j) + C\n",
+        "$$\n",
+        "\n",
+        "Ahora, como $-\\frac{1}{2}\\log |\\Sigma|$ es común a todas las clases se puede incorporar a la constante aditiva y, distribuyendo y reagrupando términos sobre $(x-\\mu_j)^T \\Sigma^{-1} (x- \\mu_j)$ se obtiene finalmente:\n",
+        "\n",
+        "\n",
+        "\n",
+        "### 2-\n",
+        "\n",
+        "LDA tiene solo terminos lineales en su funcion a maximizar. \n",
+        "$$\n",
+        "\\log{f_j(x)} =  \\mu_j^T \\Sigma^{-1} (x- \\frac{1}{2} \\mu_j) + C'\n",
+        "$$\n",
+        "\n",
+        "\n",
+        "QDA tiene un termino cuadratico, que no se puede simplificar como en LDA porque la matriz de covarianza depende de la clase\n",
+        "\n",
+        "$$\n",
+        "\\log{f_j(x)} = -\\frac{1}{2}\\log |\\Sigma_j| - \\frac{1}{2} (x-\\mu_j)^T \\Sigma_j^{-1} (x- \\mu_j) + C\n",
+        "$$\n",
+        "\n",
+        "\n",
+        "### 2-  NI IDEA"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## implementacion punto 1"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        " # ver esto en la funcion madre del bayesiano \n",
+        " # def fit(self, X, y, a_priori=None):"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -569,9 +606,12 @@
         "    # estimate COMMON  covariance matrix\n",
         "    self.inv_covs = [inv(np.cov(X[:,y.flatten()==idx], bias=True)) \n",
         "                      for idx in range(len(self.log_a_priori))]\n",
-        "    \n",
+        "    # este for no garpa, en LDA es una sola matriz de covarianza. \n",
+        "\n",
         "    self.means = [X[:,y.flatten()==idx].mean(axis=1, keepdims=True) \n",
         "                  for idx in range(len(self.log_a_priori))]\n",
+        "\n",
+        "\n",
         "\n",
         "  def _predict_log_conditional(self, x, class_idx):\n",
         "    # predict the log(P(x|G=class_idx)), the log of the conditional probability of x given the class\n",
