charlado antes de ultima clase de analisis

--- a/AMIA/LDA_QDA.ipynb
+++ b/AMIA/LDA_QDA.ipynb
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "teF9O9JJmG7Z"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 8,
       "metadata": {
         "id": "sDBLvbTtlwzs"
       },
@@ -134,18 +134,20 @@
         "    \n",
         "    # Q1: why is there no need for class_to_name?\n",
         "    \"\"\"\n",
-        "    Por que las tags del data set original estan definidas como nombres (strings)\n",
+        "    Por que las tags del data set original estan definidas como nombres (strings). \n",
+        "    Super ineficiente usar strings. \n",
         "    \n",
-        "    Porque fit va a recibir un array de tags, \n",
-        "    y hace un diccionario en donde con name y clase. \n",
-        "    La clase encoder entonces hace un encoder valga la redundancia. \n",
+        "    //chequear si usa la clase para una operacion\n",
+        " \n",
+        " \n",
         "    \"\"\"\n",
         "\n",
         "  def _map_reshape(self, f, arr):\n",
         "    return np.array([f(elem) for elem in arr.flatten()]).reshape(arr.shape)\n",
         "    # Q2: why is reshaping necessary?\n",
         "    \"\"\"\n",
-        "    Para que tenga el mismo shape que el vector de etiqutas que le voy a pasar para que haga el encoder\n",
+        "    Flatten para que sea generico el metodo. \n",
+        "    Para que tenga el mismo shape que el vector de etiquetas que le voy a pasar para que haga el encoder\n",
         "    al fin y al cabo lo que quiero  hacer es hacer un encoder de los nombres, no cambiar morfologia. \n",
         "    ademas ese flaten me reshapeea en una dimension renglon.\n",
         "\n",
@@ -246,6 +248,29 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "IndexError",
+          "evalue": "boolean index did not match indexed array along dimension 1; dimension is 4 but corresponding boolean dimension is 150",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[1;32md:\\Archivos Santiago\\_Especializacion Machine learning\\_Entregables\\Entregables-SPAZ-CEIA\\AMIA\\LDA_QDA.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Archivos%20Santiago/_Especializacion%20Machine%20learning/_Entregables/Entregables-SPAZ-CEIA/AMIA/LDA_QDA.ipynb#ch0000023?line=0'>1</a>\u001b[0m unencoder \u001b[39m=\u001b[39m ClassEncoder()\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Archivos%20Santiago/_Especializacion%20Machine%20learning/_Entregables/Entregables-SPAZ-CEIA/AMIA/LDA_QDA.ipynb#ch0000023?line=1'>2</a>\u001b[0m ycode\u001b[39m=\u001b[39m unencoder\u001b[39m.\u001b[39mfit_transform(y_full)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Archivos%20Santiago/_Especializacion%20Machine%20learning/_Entregables/Entregables-SPAZ-CEIA/AMIA/LDA_QDA.ipynb#ch0000023?line=2'>3</a>\u001b[0m X_full[:,ycode\u001b[39m.\u001b[39;49mflatten()\u001b[39m==\u001b[39;49m\u001b[39m0\u001b[39;49m]\n",
+            "\u001b[1;31mIndexError\u001b[0m: boolean index did not match indexed array along dimension 1; dimension is 4 but corresponding boolean dimension is 150"
+          ]
+        }
+      ],
+      "source": [
+        "unencoder = ClassEncoder()\n",
+        "ycode= unencoder.fit_transform(y_full)\n",
+        "X_full[:,ycode.flatten()==0]"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 7,
       "metadata": {
         "id": "IRamFdiGDuSR"
@@ -256,7 +281,7 @@
         "\n",
         "  def _fit_params(self, X, y):\n",
         "    # estimate COMMON  covariance matrix\n",
-        "    self.inv_covs = [inv(np.cov(X[:,y.flatten()==idx], bias=True)) \n",
+        "    self.inv_covs = [inv(np.cov(X[:,y.flatten()==idx], bias=True))\n",
         "                      for idx in range(len(self.log_a_priori))]\n",
         "    # Q5: why not just X[:,y==idx]?\n",
         "\n",
@@ -310,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -338,7 +363,7 @@
         "\n",
         "X_full, y_full = get_iris_dataset()\n",
         "\n",
-        "print(f\"X: {X_full.shape}, Y:{y_full.shape}\")"
+        "print(f\"X: {X_full.shape}, Y:{y_full.shape}\")\n"
       ]
     },
     {
