terminadas preguntas tecnicas

--- a/AMIA/LDA_QDA.ipynb
+++ b/AMIA/LDA_QDA.ipynb
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {
         "id": "sDBLvbTtlwzs"
       },
@@ -138,6 +138,7 @@
         "    Super ineficiente usar strings. \n",
         "    \n",
         "    //chequear si usa la clase para una operacion\n",
+        "    si se usa para indexar matrices del data set que corresponden a una misma clase. \n",
         " \n",
         " \n",
         "    \"\"\"\n",
@@ -166,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "m0KYC8_uSOu4"
       },
@@ -215,11 +216,15 @@
         "    self._fit_params(X, y)\n",
         "    # Q4: why do we need to do this last, can't we do it first?\n",
         "    \"\"\"\n",
-        "    esto depende de la definicion de \"last\" \n",
         "\n",
-        "    en el scope de esta funcion hay que hacer esto al final porque la funcion fit params, \n",
-        "    lo que va a hacer es el entrenamiento y ajuste de los parametros del modelo. \n",
-        "    para esto necesita que y esta encodeada. \n",
+        "\n",
+        "\n",
+        "     self.inv_covs = [inv(np.cov(X[:,y.flatten()==idx], bias=True))\n",
+        "                      for idx in range(len(self.log_a_priori))]\n",
+        "\n",
+        "    sin encoder no se puede indexar con I (tendrias strings)\n",
+        "    Sin estimar a priori, esta funcion tampoco se podria evaluar len(self.log_a_priori)  (si bien el assert te permitiria usar encoder names)\n",
+        "\n",
         "    los modelos de qda y LDA usan ademas una distribucion a prior, asi que necesito o estimarla por metodos no paramtericos\n",
         "    (histograma) si no le pase una.pero algo me dice que mas abajo le van a pasar una normal :) \n",
         "    \n",
@@ -248,30 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [
-        {
-          "ename": "IndexError",
-          "evalue": "boolean index did not match indexed array along dimension 1; dimension is 4 but corresponding boolean dimension is 150",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[1;32md:\\Archivos Santiago\\_Especializacion Machine learning\\_Entregables\\Entregables-SPAZ-CEIA\\AMIA\\LDA_QDA.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Archivos%20Santiago/_Especializacion%20Machine%20learning/_Entregables/Entregables-SPAZ-CEIA/AMIA/LDA_QDA.ipynb#ch0000023?line=0'>1</a>\u001b[0m unencoder \u001b[39m=\u001b[39m ClassEncoder()\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Archivos%20Santiago/_Especializacion%20Machine%20learning/_Entregables/Entregables-SPAZ-CEIA/AMIA/LDA_QDA.ipynb#ch0000023?line=1'>2</a>\u001b[0m ycode\u001b[39m=\u001b[39m unencoder\u001b[39m.\u001b[39mfit_transform(y_full)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Archivos%20Santiago/_Especializacion%20Machine%20learning/_Entregables/Entregables-SPAZ-CEIA/AMIA/LDA_QDA.ipynb#ch0000023?line=2'>3</a>\u001b[0m X_full[:,ycode\u001b[39m.\u001b[39;49mflatten()\u001b[39m==\u001b[39;49m\u001b[39m0\u001b[39;49m]\n",
-            "\u001b[1;31mIndexError\u001b[0m: boolean index did not match indexed array along dimension 1; dimension is 4 but corresponding boolean dimension is 150"
-          ]
-        }
-      ],
-      "source": [
-        "unencoder = ClassEncoder()\n",
-        "ycode= unencoder.fit_transform(y_full)\n",
-        "X_full[:,ycode.flatten()==0]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "id": "IRamFdiGDuSR"
       },
@@ -284,6 +266,9 @@
         "    self.inv_covs = [inv(np.cov(X[:,y.flatten()==idx], bias=True))\n",
         "                      for idx in range(len(self.log_a_priori))]\n",
         "    # Q5: why not just X[:,y==idx]?\n",
+        "    # Inv_covs tiene tres matrices de covarianza en principio, distintas.\n",
+        "    # Matriz de covarianza es de 4x4 features \n",
+        "    # para indexar se necesita un vector unidimensional, y el vector y tiene forma de matriz de 90x1. \n",
         "\n",
         "\n",
         "    # Q6: what does bias=True mean? why not use bias=False?\n",
@@ -291,17 +276,34 @@
         "    \"\"\"\n",
         "    np.cov: Estimate a covariance matrix, given data and weights.\n",
         "    bias: Default normalization (False) is by (N - 1), where N is the number of observations given (unbiased estimate). \n",
-        "    If bias is True, then normalization is by N. \n",
-        "    la expresion de la covarianza se pone como 1/N porque usamos un estimador de maxima verosimiulitud para la covarianza\n",
-        "    Y eso lo podemos hacer porque suponemos que conocemos la familia de distribuciones de las variables aleatorias (normales)\n",
-        "    es decir que le estoy diciendo a mi numpy que me calcule lo que corresponderia a un estimador de maxima verosimilitud.\n",
+        "    If bias is True, then normalization is by N.  1/N   \n",
+        "\n",
+        "    Sabemos que las poblaciones tienen distibucion normal por hipotesis\n",
+        "    Para los clasificadores de discriminante cuadrático y lineal (QDA/LDA) se asume que $X|_{G=j} \\sim \\mathcal{N}_p(\\mu_j, \\Sigma_j)$, es decir, se asume que cada población sigue una distribución normal.\n",
+        "\n",
+        "    Y sabemos que para esos casos un estimador de maximum liklyhhod para la \n",
+        "    covarianza de pobalcions que siguen distribucion normal tiene un factor de normalizacion de tipo 1/N\n",
+        "\n",
+        "    In cases where the distribution of the random variable X is known to be within a certain family of distributions, \n",
+        "    other estimates may be derived on the basis of that assumption. A well-known instance is when the random variable X \n",
+        "    is normally distributed: in this case the maximum likelihood estimator of the covariance matrix is slightly different \n",
+        "    from the unbiased estimate, and is given by \n",
+        "\n",
+        "\n",
+        "       \n",
         "    https://en.wikipedia.org/wiki/Estimation_of_covariance_matrices\n",
         "    \"\"\"\n",
         "\n",
         "    self.means = [X[:,y.flatten()==idx].mean(axis=1, keepdims=True) \n",
         "                  for idx in range(len(self.log_a_priori))]\n",
         "    # Q7: what does axis=1 mean? why not axis=0 instead?\n",
-        "    # significa que voy a calcular la media en direccion de los renglones, esto es porque\n",
+        "\n",
+        "    # significa que voy a calcular la media en direccion de los renglones , eporque los datos estan en filas luego de hacer \n",
+        "    # X_train, X_test, y_train, y_test = train_test_split(X_full, y_full, test_size=0.4, random_state=rng_seed)\n",
+        "    \n",
+        "    # el indexado me devuelve la sub matriz que corresponde a muestras de una misma clase. y sobre eso le calculo una media\n",
+        "\n",
+        "    # es decir que obtenes la media de los 4 features para cada clase. el vector de medias es una lista de 3 elementos donde cada elemento tiene 4 componentes. \n",
         "\n",
         "    \n",
         "  def _predict_log_conditional(self, x, class_idx):\n",
@@ -323,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 6,
       "metadata": {
         "id": "m05KrhUDINVs"
       },
@@ -368,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -377,7 +379,7 @@
               "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -388,7 +390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -407,7 +409,7 @@
               "       [5. , 3.6, 1.4, 0.2]])"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -419,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -438,7 +440,7 @@
               "       ['setosa']], dtype='<U10')"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -450,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -485,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 12,
       "metadata": {
         "id": "dGIf2TA5SpoT"
       },
@@ -498,7 +500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -601,7 +603,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -618,7 +620,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "1ChynN-GXSL5"
       },
