Comit acuracy copiada

--- a/AMIA/LDA_QDA.ipynb
+++ b/AMIA/LDA_QDA.ipynb
@@ -216,17 +216,12 @@
         "    self._fit_params(X, y)\n",
         "    # Q4: why do we need to do this last, can't we do it first?\n",
         "    \"\"\"\n",
-        "\n",
-        "\n",
-        "\n",
-        "     self.inv_covs = [inv(np.cov(X[:,y.flatten()==idx], bias=True))\n",
+        "    self.inv_covs = [inv(np.cov(X[:,y.flatten()==idx], bias=True))\n",
         "                      for idx in range(len(self.log_a_priori))]\n",
         "\n",
         "    sin encoder no se puede indexar con I (tendrias strings)\n",
         "    Sin estimar a priori, esta funcion tampoco se podria evaluar len(self.log_a_priori)  (si bien el assert te permitiria usar encoder names)\n",
         "\n",
-        "    los modelos de qda y LDA usan ademas una distribucion a prior, asi que necesito o estimarla por metodos no paramtericos\n",
-        "    (histograma) si no le pase una.pero algo me dice que mas abajo le van a pasar una normal :) \n",
         "    \n",
         "    \"\"\"\n",
         "\n",
@@ -608,7 +603,10 @@
       "outputs": [],
       "source": [
         " # ver esto en la funcion madre del bayesiano \n",
-        " # def fit(self, X, y, a_priori=None):"
+        " # def fit(self, X, y, a_priori=None):\n",
+        " # 1. Entrenar un modelo QDA utilizando ahora una *a priori* uniforme ¿Se observan diferencias?¿Por qué?\n",
+        " \n",
+        " "
       ]
     },
     {
@@ -646,6 +644,35 @@
         "    inv_cov = self.inv_covs[class_idx]\n",
         "    unbiased_x =  x - self.means[class_idx]\n",
         "    return 0.5*np.log(det(inv_cov)) -0.5 * unbiased_x.T @ inv_cov @ unbiased_x"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Comparacion de metodos\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def accuracy_qda(y_true, y_pred):\n",
+        "  return (y_true == y_pred).mean()\n",
+        "\n",
+        "train_acc = accuracy(train_y, qda.predict(train_x))\n",
+        "test_acc = accuracy(test_y, qda.predict(test_x))\n",
+        "print(f\"Train (apparent) error is {1-train_acc:.4f} while test error is {1-test_acc:.4f}\")\n",
+        "\n",
+        "\n",
+        "def accuracy_lda(y_true, y_pred):\n",
+        "  return (y_true == y_pred).mean()\n",
+        "\n",
+        "train_acc = accuracy(train_y, LDA.predict(train_x))\n",
+        "test_acc = accuracy(test_y, LDA.predict(test_x))\n",
+        "print(f\"Train (apparent) error is {1-train_acc:.4f} while test error is {1-test_acc:.4f}\")"
       ]
     }
   ],
