Comentado Sabado 20hs. Saco los pdfs  que estaban en el repo para hacer mas amigable el clone

--- a/AMIA/LDA_QDA.ipynb
+++ b/AMIA/LDA_QDA.ipynb
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 25,
       "metadata": {
         "id": "teF9O9JJmG7Z"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 26,
       "metadata": {
         "id": "sDBLvbTtlwzs"
       },
@@ -167,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 27,
       "metadata": {
         "id": "m0KYC8_uSOu4"
       },
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 28,
       "metadata": {
         "id": "IRamFdiGDuSR"
       },
@@ -306,6 +306,7 @@
         "    # this should depend on the model used\n",
         "    inv_cov = self.inv_covs[class_idx]\n",
         "    unbiased_x =  x - self.means[class_idx]\n",
+        "\n",
         "    return 0.5*np.log(det(inv_cov)) -0.5 * unbiased_x.T @ inv_cov @ unbiased_x"
       ]
     },
@@ -320,19 +321,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 29,
       "metadata": {
         "id": "m05KrhUDINVs"
       },
       "outputs": [],
       "source": [
         "# hiperparámetros\n",
-        "rng_seed = 6543"
+        "rng_seed = 6667"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -365,7 +366,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -374,7 +375,7 @@
               "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -385,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -404,7 +405,7 @@
               "       [5. , 3.6, 1.4, 0.2]])"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -416,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 33,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -435,7 +436,7 @@
               "       ['setosa']], dtype='<U10')"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -447,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -482,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 35,
       "metadata": {
         "id": "dGIf2TA5SpoT"
       },
@@ -495,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -508,7 +509,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Train (apparent) error is 0.0111 while test error is 0.0167\n"
+            "Train (apparent) error is 0.0000 while test error is 0.0333\n"
           ]
         }
       ],
@@ -550,9 +551,7 @@
         "\n",
         "2. Explicar, utilizando las respectivas funciones a maximizar, por qué QDA y LDA son \"quadratic\" y \"linear\".\n",
         "\n",
-        "3. La implementación de QDA estima la probabilidad condicional utilizando `0.5*np.log(det(inv_cov)) -0.5 * unbiased_x.T @ inv_cov @ unbiased_x` que no es *exactamente* lo descrito en el apartado teórico ¿Cuáles son las diferencias y por qué son expresiones equivalentes?\n",
-        "\n",
-        "El espíritu de esta componente práctica es la de establecer un mínimo de trabajo aceptable para su entrega; se invita al alumno a explorar otros aspectos que generen curiosidad, sin sentirse de ninguna manera limitado por la consigna."
+        "3.La implementación de QDA estima la probabilidad condicional utilizando 0.5*np.log(det(inv_cov)) -0.5 * unbiased_x.T @ inv_cov @ unbiased_x que no es exactamente lo descrito en el apartado teórico ¿Cuáles son las diferencias y por qué son expresiones equivalentes?\n"
       ]
     },
     {
@@ -563,21 +562,50 @@
         "\n",
         "### 1- \n",
         "\n",
+        "Dado que para LDA $\\Sigma_j == \\Sigma $:\n",
         "$$\n",
         "\\log{f_j(x)} =  -\\frac{1}{2}\\log |\\Sigma| - \\frac{1}{2} (x-\\mu_j)^T \\Sigma^{-1} (x- \\mu_j) + C\n",
         "$$\n",
         "\n",
-        "Ahora, como $-\\frac{1}{2}\\log |\\Sigma|$ es común a todas las clases se puede incorporar a la constante aditiva y, distribuyendo y reagrupando términos sobre $(x-\\mu_j)^T \\Sigma^{-1} (x- \\mu_j)$ se obtiene finalmente:\n",
+        "Ahora, como $-\\frac{1}{2}\\log |\\Sigma|$ es común a todas las clases se puede incorporar a la constante aditiva. Luego, distribuyendo las matrices resultantes:\n",
+        "$$\n",
+        "\\log{f_j(x)} =  -\\frac{1}{2} x^T \\Sigma^{-1} x + \\frac{1}{2} x^T \\Sigma^{-1} \\mu_j + \\frac{1}{2} \\mu_j^T \\Sigma^{-1} x - \\frac{1}{2} \\mu_j^T \\Sigma^{-1} \\mu_j + C \n",
+        "$$\n",
+        "\n",
+        "El primer término de la suma es independiente de la clase j, por lo que se puede incorporar a la constante aditiva.\n",
+        "Ahora, si tomamos el segundo término de la suma, usando la propiedad de la transpuesta de un producto de matrices $ (AB)^T = B^T A^T $ y que $ (A^T)^T = A $ , resulta que \n",
+        "$$\n",
+        "x^T \\Sigma^{-1} \\mu_j = ( \\mu_j^T (\\Sigma^{-1})^T x )^T\n",
+        "$$\n",
+        "Dado que la matríz $\\Sigma$ es cuadrada y simétrica, luego $\\Sigma ^ -1$ es cuadrada y simétrica, entonces $ (\\Sigma^{-1})^T = (\\Sigma^{-1})$. Por lo tanto, la ecuación para el logaritmo de la probabilidad resulta:\n",
+        "$$\n",
+        "\\log{f_j(x)} =  \\frac{1}{2} [\\mu_j^T \\Sigma^{-1} x ]^T + \\frac{1}{2} \\mu_j^T \\Sigma^{-1} x - \\frac{1}{2} \\mu_j^T \\Sigma^{-1} \\mu_j + C \n",
+        "$$\n",
+        "\n",
+        "Ahora, viendo las dimensiones de las matrices del primer término, tenemos que $\\mu_j \\epsilon ℝ^{(1xk)}$,  $\\Sigma \\epsilon ℝ^{(kxk)}$ y  $x \\epsilon ℝ^{(kx1)} $, donde k es la cantidad de features del dataset.\n",
+        "\n",
+        "Por lo tanto $ [\\mu_j^T \\Sigma^{-1} x ] $ es un escalar y la ecuación se puede reducir de la siguiente forma:\n",
+        "$$\n",
+        "\\log{f_j(x)} =  \\frac{1}{2} \\mu_j^T \\Sigma^{-1} x + \\frac{1}{2} \\mu_j^T \\Sigma^{-1} x - \\frac{1}{2} \\mu_j^T \\Sigma^{-1} \\mu_j + C = \\mu_j^T \\Sigma^{-1} x - \\frac{1}{2} \\mu_j^T \\Sigma^{-1} \\mu_j + C = \\mu_j^T \\Sigma^{-1} (x - \\frac{1}{2} \\mu_j^T) + C\n",
+        "$$\n",
+        "\n",
+        "Lo que resulta que, para LDA:\n",
+        "$$\n",
+        "\\log{f_j(x)} = \\mu_j^T \\Sigma^{-1} (x - \\frac{1}{2} \\mu_j^T) + C\n",
+        "$$\n",
         "\n",
         "\n",
         "\n",
         "### 2-\n",
+        "\n",
+        "Como se demostro anteriormente, la funcion a maximizar de LDA tiene un termino lineal. \n",
         "\n",
         "LDA tiene solo terminos lineales en su funcion a maximizar. \n",
         "$$\n",
         "\\log{f_j(x)} =  \\mu_j^T \\Sigma^{-1} (x- \\frac{1}{2} \\mu_j) + C'\n",
         "$$\n",
         "\n",
+        "Sin embargo \n",
         "\n",
         "QDA tiene un termino cuadratico, que no se puede simplificar como en LDA porque la matriz de covarianza depende de la clase\n",
         "\n",
@@ -586,7 +614,20 @@
         "$$\n",
         "\n",
         "\n",
-        "### 2-  NI IDEA"
+        "### 3-  Propiedades de los logaritmos\n",
+        "\n",
+        "teoria\n",
+        "$$\n",
+        "\\log{f_j(x)} = -\\frac{1}{2}\\log |\\Sigma_j| - \\frac{1}{2} (x-\\mu_j)^T \\Sigma_j^{-1} (x- \\mu_j) + C\n",
+        "$$\n",
+        "Codigo\n",
+        "`0.5*np.log(det(inv_cov)) -0.5 * unbiased_x.T @ inv_cov @ unbiased_x`\n",
+        "\n",
+        "\n",
+        "Respuesta:el codigo usa la inversa de matriz de covarianza, mientras que el apartado teorico no. \n",
+        "\n",
+        "Estos dos valores son equivalentes porque al -log(det(v))  = log( det( inv(v) ) ), esto es por propiedades del logartimo para los exponentes, para la funcion log baja el - 1. \n",
+        "//redactar mejor"
       ]
     },
     {
@@ -597,19 +638,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        " # ver esto en la funcion madre del bayesiano \n",
-        " # def fit(self, X, y, a_priori=None):\n",
-        " # 1. Entrenar un modelo QDA utilizando ahora una *a priori* uniforme ¿Se observan diferencias?¿Por qué?\n",
-        " \n",
-        " "
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -617,8 +645,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Obsérvese que para ambos modelos, ajustarlos a los datos implica estimar los parámetros $(\\mu_j, \\Sigma_j) \\; \\forall j = 1, \\dots, k$ en el caso de QDA, y $(\\mu_j, \\Sigma)$ para LDA.\n",
+        "\n",
+        "Estos parámetros se estiman por máxima verosimilitud, de manera que los estimadores resultan:\n",
+        "\n",
+        "* $\\hat{\\mu}_j = \\bar{x}_j$ el promedio de los $x$ de la clase *j*\n",
+        "* $\\hat{\\Sigma}_j = s^2_j$ la matriz de covarianzas estimada para cada clase *j*\n",
+        "* $\\hat{\\pi}_j = f_{R_j} = \\frac{n_j}{n}$ la frecuencia relativa de la clase *j* en la muestra\n",
+        "* $\\hat{\\Sigma} = \\frac{1}{n} \\sum_{j=1}^k n_j \\cdot s^2_j$ el promedio ponderado (por frecs. relativas) de las matrices de covarianzas de todas las clases. *Observar que se utiliza el estimador de MV y no el insesgado*\n",
+        "\n",
+        "Es importante notar que si bien todos los $\\mu, \\Sigma$ deben ser estimados, la distribución *a priori* puede no inferirse de los datos sino asumirse previamente, utilizándose como entrada del modelo."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 37,
       "metadata": {
         "id": "1ChynN-GXSL5"
       },
@@ -631,7 +675,20 @@
         "    # estimate COMMON  covariance matrix\n",
         "    self.inv_covs = [inv(np.cov(X[:,y.flatten()==idx], bias=True)) \n",
         "                      for idx in range(len(self.log_a_priori))]\n",
-        "    # este for no garpa, en LDA es una sola matriz de covarianza. \n",
+        "    \n",
+        "\n",
+        "    total = len(y)  # ejemplo 90\n",
+        "    (unique, counts) = np.unique(y, return_counts=True)  # (0, cantidad de ceros) (1, cantidad de 1) (2, cantidad de 2)\n",
+        "    self.inv_cov_inbetween = np.zeros(self.inv_covs[0].shape)\n",
+        "\n",
+        "    #asumo que las matrices de covariaza estan ordenadas por clase. entonces\n",
+        "    for index in range(len(counts)):\n",
+        "      self.inv_cov_inbetween = self.inv_cov_inbetween + np.multiply( self.inv_covs[index], (counts[index])/total )\n",
+        "\n",
+        "    print(np.shape(self.inv_cov_inbetween))\n",
+        "    self.inv_covs = [self.inv_cov_inbetween for i in range(len(unique))]\n",
+        "\n",
+        "\n",
         "\n",
         "    self.means = [X[:,y.flatten()==idx].mean(axis=1, keepdims=True) \n",
         "                  for idx in range(len(self.log_a_priori))]\n",
@@ -643,7 +700,26 @@
         "    # this should depend on the model used\n",
         "    inv_cov = self.inv_covs[class_idx]\n",
         "    unbiased_x =  x - self.means[class_idx]\n",
-        "    return 0.5*np.log(det(inv_cov)) -0.5 * unbiased_x.T @ inv_cov @ unbiased_x"
+        "    return 0.5*np.log(det(np.linalg.inv( inv_cov))) -0.5 * unbiased_x.T @ inv_cov @ unbiased_x"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(4, 4)\n"
+          ]
+        }
+      ],
+      "source": [
+        "un_lda = LDA()\n",
+        "\n",
+        "un_lda.fit(train_x, train_y)"
       ]
     },
     {
@@ -655,24 +731,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "QDA Train (apparent) error is 0.00000000 while test error is 0.03333333\n",
+            "LDA Train (apparent) error is 0.02222222 while test error is 0.03333333\n"
+          ]
+        }
+      ],
       "source": [
         "def accuracy_qda(y_true, y_pred):\n",
         "  return (y_true == y_pred).mean()\n",
         "\n",
         "train_acc = accuracy(train_y, qda.predict(train_x))\n",
         "test_acc = accuracy(test_y, qda.predict(test_x))\n",
-        "print(f\"Train (apparent) error is {1-train_acc:.4f} while test error is {1-test_acc:.4f}\")\n",
+        "print(f\"QDA Train (apparent) error is {1-train_acc:.8f} while test error is {1-test_acc:.8f}\")\n",
         "\n",
         "\n",
         "def accuracy_lda(y_true, y_pred):\n",
         "  return (y_true == y_pred).mean()\n",
         "\n",
-        "train_acc = accuracy(train_y, LDA.predict(train_x))\n",
-        "test_acc = accuracy(test_y, LDA.predict(test_x))\n",
-        "print(f\"Train (apparent) error is {1-train_acc:.4f} while test error is {1-test_acc:.4f}\")"
+        "train_acc = accuracy(train_y, un_lda.predict(train_x))\n",
+        "test_acc = accuracy(test_y, un_lda.predict(test_x))\n",
+        "print(f\"LDA Train (apparent) error is {1-train_acc:.8f} while test error is {1-test_acc:.8f}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 3. Utilizar otros 2 (dos) valores de *random seed* para obtener distintos splits de train y test, y repetir la comparación del punto anterior ¿Qué se observa?\n",
+        "\n",
+        "Se usaron valores de random seed:  0 , 42,  425, 6543, 888, 6667\n",
+        "\n",
+        "Los valores obtenidos fueron: \n",
+        "\n",
+        "\n",
+        "\n",
+        "Puede observarse que tanto los modelos lineales como cuadraticos tienen el mismo error de test en ambos casos. pero distintos errores de test"
       ]
     }
   ],
