--- a/AMIA/LDA_QDA.ipynb
+++ b/AMIA/LDA_QDA.ipynb
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 1,
       "metadata": {
         "id": "teF9O9JJmG7Z"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 2,
       "metadata": {
         "id": "sDBLvbTtlwzs"
       },
@@ -167,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 3,
       "metadata": {
         "id": "m0KYC8_uSOu4"
       },
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 4,
       "metadata": {
         "id": "IRamFdiGDuSR"
       },
@@ -321,19 +321,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 5,
       "metadata": {
         "id": "m05KrhUDINVs"
       },
       "outputs": [],
       "source": [
         "# hiperparámetros\n",
-        "rng_seed = 6667"
+        "rng_seed = 65"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -366,7 +366,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -375,7 +375,7 @@
               "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -386,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -405,7 +405,7 @@
               "       [5. , 3.6, 1.4, 0.2]])"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -436,7 +436,7 @@
               "       ['setosa']], dtype='<U10')"
             ]
           },
-          "execution_count": 33,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -448,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -483,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 11,
       "metadata": {
         "id": "dGIf2TA5SpoT"
       },
@@ -496,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -509,7 +509,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Train (apparent) error is 0.0000 while test error is 0.0333\n"
+            "Train (apparent) error is 0.0111 while test error is 0.0500\n"
           ]
         }
       ],
@@ -598,20 +598,23 @@
         "\n",
         "### 2-\n",
         "\n",
-        "Como se demostro anteriormente, la funcion a maximizar de LDA tiene un termino lineal. \n",
-        "\n",
-        "LDA tiene solo terminos lineales en su funcion a maximizar. \n",
-        "$$\n",
-        "\\log{f_j(x)} =  \\mu_j^T \\Sigma^{-1} (x- \\frac{1}{2} \\mu_j) + C'\n",
-        "$$\n",
-        "\n",
-        "Sin embargo \n",
-        "\n",
-        "QDA tiene un termino cuadratico, que no se puede simplificar como en LDA porque la matriz de covarianza depende de la clase\n",
+        "Se sabe que la expresion a maximizar es\n",
         "\n",
         "$$\n",
         "\\log{f_j(x)} = -\\frac{1}{2}\\log |\\Sigma_j| - \\frac{1}{2} (x-\\mu_j)^T \\Sigma_j^{-1} (x- \\mu_j) + C\n",
         "$$\n",
+        "\n",
+        "Ahora, como $-\\frac{1}{2}\\log |\\Sigma|$ es común a todas las clases se puede incorporar a la constante aditiva. Luego, distribuyendo las matrices resultantes:\n",
+        "$$\n",
+        "\\log{f_j(x)} =  -\\frac{1}{2} x^T \\Sigma_j^{-1} x + \\frac{1}{2} x^T \\Sigma_j^{-1} \\mu_j + \\frac{1}{2} \\mu_j^T \\Sigma_j^{-1} x - \\frac{1}{2} \\mu_j^T \\Sigma_j^{-1} \\mu_j + C \n",
+        "$$\n",
+        "\n",
+        "\n",
+        "En el caso de LDA El termino $-\\frac{1}{2} x^T \\Sigma^{-1} x $ es cuadratico en x, pero la matriz de covarianza NO depende de la clase (porque por hipotesis se supone que es la misma para todas las clases) por lo cual el termino es igual a todas las clases y puede considerarse como invariable, por lo que tambien puede incorporarse a la variable aditiva. Al incorporarse este termino a la constante aditiva, la ecuacion a maximizar solo tiene una componente lineal en x (como se ve en la expresion final de la pregunta teorica 1)\n",
+        "\n",
+        "En el caso de QDA sin embargo el termino $-\\frac{1}{2} x^T \\Sigma_j^{-1} x $ es cuadratico en x, y ademas la matriz de covarianza depende de la clase por lo cual el termino entero varia por clase y no puede considerarse constante. Ese termino cuadratico en la ecuacion a maximizar es el que da a QDA su componente cuadratica.\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "### 3-  Propiedades de los logaritmos\n",
@@ -628,6 +631,20 @@
         "\n",
         "Estos dos valores son equivalentes porque al -log(det(v))  = log( det( inv(v) ) ), esto es por propiedades del logartimo para los exponentes, para la funcion log baja el - 1. \n",
         "//redactar mejor"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## ############################################"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## /---------------------------------------------------------"
       ]
     },
     {
@@ -662,7 +679,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 13,
       "metadata": {
         "id": "1ChynN-GXSL5"
       },
@@ -705,7 +722,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -731,15 +748,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "QDA Train (apparent) error is 0.00000000 while test error is 0.03333333\n",
-            "LDA Train (apparent) error is 0.02222222 while test error is 0.03333333\n"
+            "QDA Train (apparent) error is 0.01111111 while test error is 0.05000000\n",
+            "LDA Train (apparent) error is 0.01111111 while test error is 0.03333333\n"
           ]
         }
       ],
@@ -747,17 +764,17 @@
         "def accuracy_qda(y_true, y_pred):\n",
         "  return (y_true == y_pred).mean()\n",
         "\n",
-        "train_acc = accuracy(train_y, qda.predict(train_x))\n",
-        "test_acc = accuracy(test_y, qda.predict(test_x))\n",
-        "print(f\"QDA Train (apparent) error is {1-train_acc:.8f} while test error is {1-test_acc:.8f}\")\n",
+        "train_acc_q = accuracy_qda(train_y, qda.predict(train_x))\n",
+        "test_acc_q = accuracy_qda(test_y, qda.predict(test_x))\n",
+        "print(f\"QDA Train (apparent) error is {1-train_acc_q:.8f} while test error is {1-test_acc_q:.8f}\")\n",
         "\n",
         "\n",
         "def accuracy_lda(y_true, y_pred):\n",
         "  return (y_true == y_pred).mean()\n",
         "\n",
-        "train_acc = accuracy(train_y, un_lda.predict(train_x))\n",
-        "test_acc = accuracy(test_y, un_lda.predict(test_x))\n",
-        "print(f\"LDA Train (apparent) error is {1-train_acc:.8f} while test error is {1-test_acc:.8f}\")"
+        "train_acc_l = accuracy_lda(train_y, un_lda.predict(train_x))\n",
+        "test_acc_l = accuracy_lda(test_y, un_lda.predict(test_x))\n",
+        "print(f\"LDA Train (apparent) error is {1-train_acc_l:.8f} while test error is {1-test_acc_l:.8f}\")"
       ]
     },
     {
@@ -766,13 +783,29 @@
       "source": [
         "## 3. Utilizar otros 2 (dos) valores de *random seed* para obtener distintos splits de train y test, y repetir la comparación del punto anterior ¿Qué se observa?\n",
         "\n",
-        "Se usaron valores de random seed:  0 , 42,  425, 6543, 888, 6667\n",
+        "### Random seed: 6543\n",
         "\n",
-        "Los valores obtenidos fueron: \n",
+        "QDA Train (apparent) error is 0.01111111 while test error is 0.01666667\n",
         "\n",
+        "LDA Train (apparent) error is 0.04444444 while test error is 0.0166666\n",
         "\n",
+        "### Random seed: 0\n",
         "\n",
-        "Puede observarse que tanto los modelos lineales como cuadraticos tienen el mismo error de test en ambos casos. pero distintos errores de test"
+        "QDA Train (apparent) error is 0.01111111 while test error is 0.03333333\n",
+        "\n",
+        "LDA Train (apparent) error is 0.01111111 while test error is 0.08333333\n",
+        "\n",
+        "### Random seed: 42\n",
+        "\n",
+        "QDA Train (apparent) error is 0.01111111 while test error is 0.01666667\n",
+        "\n",
+        "LDA Train (apparent) error is 0.03333333 while test error is 0.01666667\n",
+        "\n",
+        "### Random seed: 65\n",
+        "QDA Train (apparent) error is 0.01111111 while test error is 0.05000000\n",
+        "\n",
+        "LDA Train (apparent) error is 0.01111111 while test error is 0.03333333\n",
+        "\n"
       ]
     }
   ],
